--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!DOCTYPE html><html><body><h1>Hello World</h1></body></html>
+<!DOCTYPE html>
+<html>
+<body>
+<header>
+  <h2>Welcome to My Website</h2>
+</header>
+<h1>Hello World</h1>
+</body>
+</html>
