Add footer section to index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
   <h2>Welcome to My Website</h2>
 </header>
 <h1>Hello World</h1>
+<footer>
+  <p>© 2025 My Website. All rights reserved.</p>
+</footer>
 </body>
 </html>
